# rust-demo

./: .env  .gitignore  Cargo.toml  README.md  build.rs  config.yaml
agent/: Cargo.toml
agent/src/: fatal.rs  log_config.rs  main.rs  metrics_list.rs  redis_info.rs  redis_metrics.rs
agents/machine_agent/: Cargo.toml
agents/machine_agent/src/: main.rs
assets/: example.aseprite  example.json
assets/basic_excel/: [Content_Types].xml
assets/basic_excel/_rels/: .rels
assets/basic_excel/docProps/: app.xml  core.xml
assets/basic_excel/xl/: sharedStrings.xml  styles.xml  workbook.xml
assets/basic_excel/xl/_rels/: workbook.xml.rels
assets/basic_excel/xl/theme/: theme1.xml
assets/basic_excel/xl/worksheets/: sheet1.xml
assets/shaders/: custom_material.wgsl
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/model/src/models/: mod.rs
crates/model/src/models/content_types/: mod.rs
crates/model/src/models/doc_props/: mod.rs
crates/model/src/models/xl/: mod.rs
mock/: request.http  sample.http
monitor/: Cargo.toml
monitor/src/: main.rs
preview/: index.html  index.ts  package.json  vite.config.ts
preview/benchmark/: index.html  index.ts
preview/webgpu/: index.html  index.ts
src/: agent.rs  breakout.rs  client.rs  color.rs  context.rs  debug.rs  dom.rs  input_control.rs  lib.rs  main.rs  model.rs  num.c  rectangle.rs  redis_metrics.rs  runtime.rs  sandbox.rs  server.rs  shader.wgsl  util.rs
src/color/: mod.rs
src/geometry/: line.rs  mod.rs  point.rs  rectangle.rs  size.rs
src/gpu/: context.rs  mod.rs  vertex.rs
src/gpu/pipeline/: mod.rs
src/gpu/shader/: shader.wgsl
src/model/: mod.rs
visualizer/: Cargo.toml
visualizer/src/: lib.rs  main.rs
