[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent"
path = "src/agent.rs"

[[bin]]
name = "server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.22.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.86"
sysinfo = "0.27.2"
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
