[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-inspector-egui = "0.18.0"

[dependencies.bevy]
version = "0.10.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "x11",
]