[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
walkdir = "2"
quick-xml = { version = "0.27.1", features = ["serialize"] }
model = { path = "./crates/model" }