[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.22.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.86"
sysinfo = "0.27.2"
dotenv = "0.15.0"
log = "0.4.17"
log4rs = "1.2.0"
