[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time", "sync", "fs"] }
tokio-tungstenite = "0.18.0"
anyhow = "1.0.68"
serde = { version = "1.0.149", features = ["derive"] }
serde_yaml = "0.9.14"
chrono = "0.4.23"
regex = "1.7.1"
visualizer = { path = "../visualizer" }
