[package]
name = "machine_agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite = "0.18.0"
tungstenite = { version = "0.18.0", default-features = false }
sysinfo = "0.27.2"
anyhow = "1.0.68"